--- a/mystyle.css
+++ b/mystyle.css
@@ -6,9 +6,6 @@ body{
   background-color: grey;
 }
 
-
-p {font-size: 12pt; color: Black;}
-
 #column_one {float: left; padding: 1%; background-color: white; color: black;}
 
-#column_two {float: right; padding: 1%; background-color: black; color: white;}
+#column_two {float: padding: 1%; background-color: black; color: white;}
